# maven-oracles

./: .contracts.ithacanet-kms.env  .contracts.ithacanet.env  .dockerignore  .env.example  .ghostnet.env  .gitignore  .prettierignore  CONFIG.md  CONTRIBUTING.md  DOC.md  LICENSE  NOTES.md  README.md  SETUP.md  codecov.yml  docker-compose.prod.yml  docker-compose.yml  logs.txt  mavseal.dev.yaml  nx.json  package-lock.json  package.json  rush.json  secret.json  signatory.dev.yaml  tsconfig.base.json  workspace.json
images/: node.Dockerfile  (+3 more)
indexer/: .gitignore  Dockerfile  dipdup.contracts.yml  dipdup.local.yml  dipdup.prod.yml  dipdup.yml  package.json  pyproject.toml
indexer/oracles/deploy/: docker-compose.yml
indexer/oracles/handlers/aggregator/: add_oracle.py  origination.py  remove_oracle.py  set_name.py  update_config.py  update_data.py  update_metadata.py  update_oracle.py
indexer/oracles/models/: __init__.py
indexer/oracles/sql/on_reindex/: 00_create-hypertables.sql
indexer/oracles/types/aggregator/: tezos_storage.py
indexer/oracles/types/aggregator_factory/: tezos_storage.py
indexer/oracles/utils/: __init__.py
src/contracts/: README.md  env.js  faucet.json  package-lock.json  package.json  pyproject.toml  sandbox-init.sh  truffle-config.js  tsconfig.json
src/contracts/helpers/: constants.js  mvkTokenDecimals.json  saveContractAddress.js  saveMVKDecimals.js
src/contracts/scripts/: cli.ts  helpers.ts
src/contracts/storage/: mockFa12TokenStorage.ts  mockFa2TokenStorage.ts  mvkTokenStorage.ts
src/contracts/test/: 01_test_mvk_token.spec.ts
(+353 files in other folders)
