[tool.poetry]
name = "oracle-indexer"
version = "1.0.0"
description = ""
authors = ["Tristan Allaire <tristan.allaire@alarch.fr>"]

[tool.poetry.dependencies]
python = "3.12.4"
dipdup = "8.2.2"
python-dateutil = "^2.8.2"
PyYAML = "^6.0"
python-telegram-bot = "^20.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
